tests/snapshots/integration__integration_tests__merge__merge_pre_merge_command_named.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpibRGV7/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
💡 [2mOnly 1 commit since [0m[1m[36mmain[0m[2m - no squashing needed[0m
🔄 [36mRebasing onto [0m[1m[36mmain[0m[36m...[0m
✅ [32mRebased onto [1m[32mmain[0m[0m
🔄 [36mRunning pre-merge: [1mformat[0m[0m
[40m [0m [1m[34mexit[0m 0[0m

🔄 [36mRunning pre-merge: [1mlint[0m[0m
[40m [0m [1m[34mexit[0m 0[0m

🔄 [36mRunning pre-merge: [1mtest[0m[0m
[40m [0m [1m[34mexit[0m 0[0m

🔄 [36mMerging 1 commit to [1m[36mmain[0m[0m @ [SHA]

* [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m Add feature file

 feature.txt | 1 [32m+[m
 1 file changed, 1 insertion(+)

✅ [32mMerged to [1m[32mmain[0m (1 commit, 1 file, [32m+1[0m)  [0m
🔄 [36mCleaning up worktree...[0m

✅ [32mReturned to primary at [1m[32m[REPO][0m[0m

----- stderr -----
[0m[0m[0m
