tests/snapshots/integration__integration_tests__merge__merge_pre_merge_command_stdout_stderr_ordering.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpMGhwKV/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mRebasing onto [1m[36mmain[0m...[0m
🔄 [36mRunning pre-merge: [1mcheck1[0m[0m
[40m [0m [1m[34m[PROJECT_ROOT]/tests/fixtures/mixed-output.sh check1 3

🔄 [36mRunning pre-merge: [1mcheck2[0m[0m
[40m [0m [1m[34m[PROJECT_ROOT]/tests/fixtures/mixed-output.sh check2 3

🔄 [36mMerging 1 commit to [1m[36mmain[0m[0m @ [SHA]

* [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m Add feature file

 feature.txt | 1 [32m+[m
 1 file changed, 1 insertion(+)

✅ [32mMerged to [1m[32mmain[0m (1 commit, 1 file, [32m+1[0m)  [0m
🔄 [36mCleaning up worktree...[0m

✅ [32mReturned to primary at [2m[REPO][0m[0m

----- stderr -----
[0m[check1] stdout line 1
[check1] stderr line 1
[check1] stdout line 2
[check1] stderr line 2
[check1] stdout line 3
[check1] stderr line 3
[check1] stdout complete
[check1] stderr complete
[0m[check2] stdout line 1
[check2] stderr line 1
[check2] stdout line 2
[check2] stderr line 2
[check2] stdout line 3
[check2] stderr line 3
[check2] stdout complete
[check2] stderr complete
