tests/snapshots/integration__integration_tests__merge__merge_squash_llm_fallback.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--squash"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
    WORKTRUNK_LLM__COMMAND: nonexistent-llm-command
---
success: true
exit_code: 0
----- stdout -----
Squashing 2 commits into one...
Successfully squashed 2 commits into one
Rebasing onto [1mmain[0m...
Fast-forwarding [1mmain[0m to current HEAD...
Pushing 1 commit to [1mmain[0m
Successfully pushed to [1mmain[0m
Cleaning up worktree...
Moved to primary worktree and removed worktree
Path: [REPO]

To enable automatic cd, run: wt configure-shell

----- stderr -----
Warning: LLM generation failed, using deterministic message
