tests/snapshots/integration__integration_tests__merge__merge_squash_single_commit.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--squash"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
Only 1 commit since [1mmain[0m - no squashing needed
Rebasing onto [1mmain[0m...
Fast-forwarding [1mmain[0m to current HEAD...
Pushing 1 commit to [1mmain[0m
Successfully pushed to [1mmain[0m
Cleaning up worktree...
Moved to primary worktree and removed worktree
Path: [REPO]

To enable automatic cd, run: wt configure-shell

----- stderr -----
